--- a/01_exploration/story/story.Rmd
+++ b/01_exploration/story/story.Rmd
@@ -1,121 +1,205 @@
 ---
-title: "Which DVS tribe do you belong?"
+title: "Which DVS persona are you? (Explainer)"
 output: html_notebook
 ---
 
-The DVS community is a diverse community made up of people from different backgrounds, demographics and experiences. Have you ever wondered what could be the different possible profiles that are made up of this community and which of these profiles do you identify yourself the closest to?
+The DVS community is a diverse community made up of dataviz practicioners from different demographics and experiences. Have you ever wondered what could be the different possible personas that are made up of this community and which of these personas do you identify yourself the closest to?
 
-Let's look at the 4 different indicators and mix-match them to create different profiles of what the DVS population are made out of:
+Let's look at the 4 different indicators and mix & match them to create different personas of what the DVS population are made out of.
+
+Among 2,165 survey respondents, 1,288 have provided all of the **4 major indicators** and have answered at least one of the **4 additional indicators**.
+
+**4 major indicators:**
 
 * **Years of experience** (Junior vs Senior)
-* **Role** (Creative vs Analytical)
+* **Role** (Analytical vs Creative)
 * **Income group** (Humbly-paid vs Well-paid)
-* **Commitment** (Hobbyist vs Professional)
+* **Commitment** (Independent vs Associate)
 
-#### Percentage distribution of tribes according to different combination of indicators
+**4 additional indicators:**
+
+* **Tools for DVS** - identifies the character for each persona
+* **Organizations / Industry** - distribution of the personas to which they are more endemic
+* **Frustrations** - do each personas have varying frustrations?
+* **Issues** - socio-economic or dvs-specific issues for each persona
+
+## 4 Major Indicators
+
+Let's look at our first major indicator, an indicator identifying your veteranship in the community!
+
+### Years of experience (Junior vs Senior)
+Do you lean more towards being a newbie or do you lean more towards being an experienced one? We look at the years of experience as the seniority indicator of how long you've been practicing dataviz work.
+
+This indicator uses the **YearsDVExperience** variable. **YearsWorkExperience** is secondary variable when no YearsDVExperience was provided.
+
+The median years of experience is **6 years**. Let's define you as a **Junior** if your DV experience is less than 6 years, while being a **Senior** if it is more than 6 years.
 ```{r}
-library("tidyverse")
-source("scripts/clean.R")
-
-tribe_tally
-
-tribe_plot <- tribe_tally %>% 
-         mutate(group = paste(Experience, RoleType, IncomeGroup, Commitment)) %>%
-         mutate(group = fct_reorder(group, n))
-
-ggplot(tribe_plot, aes(reorder(group, nPerc), nPerc)) + 
-  geom_col(fill = "blue") +
-  coord_flip()
-  
-```
-
-
-## Years of experience (Junior vs Senior)
-
-Median years of experience is 6 years. You are considered a **junior** if your DV experience is less than 6 years, while **senior** if more than 6 years.
-```{r}
-experience_sorted
-
 ggplot(experience_sorted, aes(YearsDVExperience, weight = n, fill = experience)) + 
   geom_bar() +
   coord_flip()
 
 ```
 
-## Role (Creative vs Analytical)
+```{r}
+experience_sorted
+```
 
-Around 44% of the DVS members have analytical-leaning roles while only 14% belong to the creative-leaning roles. Meanwhile, some roles have been categorised as ambiguous and could hardly be categorized such as leadership and cartography. They comprise 18% of the DVS population. 22% chose to not indicate their roles.
+### Role (Analytical vs Creative)
 
-While roles are usually requires to be both creative or analytical in function and purpose, we attempt to classify roles that are more likely leaning towards either of them.
+Around 58% of the DVS members lean towards analytical roles while only 15% lean towards the creative roles.  A huge chunk of 27% chose to not indicate their roles.
 
-### Creative
-Roles that lean more towards creative or humanities related subjects:
+This indicator uses **RoleAsEmployee** as the primary variable. When this variable is not provided by the respondent, the **RoleAsFreelance** is being accessed.
 
-* Designer
-* Journalist
-* Teacher
-* Cartographer
+While roles usually require to be both creative or analytical in function and purpose, we attempt to classify roles that are more likely leaning towards either of them.
 
-### Analytical
-Roles that lean more toward analytical or rational related subjects:
+#### Analytical
+Roles that lean more toward analytical or science related fields:
 
-* Analyst
-* Developer
-* Scientist
-* Engineer
-* Leadership (Manager, Director, VP, etc.)
+* **Analyst**
+* **Developer**
+* **Scientist**
+* **Engineer**
+* **Leadership (Manager, Director, VP, etc.)**
 
+#### Creative
+Roles that lean more towards creative or humanities related fields:
 
-#### 44% are Analytical and less than half of it are Creatives
+* **Designer**
+* **Journalist**
+* **Teacher**
+* **Cartographer**
+
+Note: Leadership and Cartographer roles tend to be ambiguously either creative or analytical, also as much as other roles. For the sake of removing the ambiguity, we tried to judge based on the reality and nature of the profession.
+
+Stories that helped on how they were classified:
+
+* [Creativity and the Role of the Leader](https://hbr.org/2008/10/creativity-and-the-role-of-the-leader)
+* [A Day in the Life of an Ordinance Survey Cartographer](https://geoawesomeness.com/cartography-career-gis-skills/)
+
+**58% are Analyticals while 15% are Creatives**
+
+```{r, fig.width=10, fig.height=1.5} 
+ggplot(role_tally %>% 
+         mutate(Class = "class"), 
+       aes(Class, nPerc, fill = RoleType)) +
+  geom_bar(position = "stack", stat = "identity") +
+  coord_flip()
+```
 ```{r} 
 role_tally
 
 ```
 
-```{r, fig.width=10, fig.height=1.5} 
-ggplot(role_tally %>% filter(RoleType != "unknown"), 
-       aes(RoleType, weight = nPerc, fill = RoleType)) +
-  geom_bar() +
-  coord_flip()
+### Income group (Humbly-paid vs Well-paid)
 
-```
-## Income group (Humbly-paid vs Well-paid)
+Median annual income in the DVS community is at **$81,300**. 
 
-Median annual income is at $81,300. You are considered **humbly-paid** if your'e annual income falls below the median annual income and **well-paid** if above it.
+Let's define you as **humbly-paid** if your annual income falls below the median annual income and **well-paid** if above it. We try to define these terms in respect to the entire DV population.
+
+This indicator was taken from **PayAnnual** variable.
+
+Note: The terms *humbly-paid* and *well-paid* depicts the lower and upper halves of the distribution. These terms could be subjective to every DVS member depending on their cost of living in their respective countries and other such factors.
 ```{r}
-income_sorted
-
 ggplot(income_sorted, aes(PayAnnual, weight = n, fill = income_group)) +
   geom_bar() +
   coord_flip()
 ```
 
-## Commitment (Hobbyist vs Employee)
-
-### Hobbyist
-
-Hobbyists are those who do datavis driven with passion and perseverance. They're group together who lean towards:
-
-* Worked on a non-paid project 
-* Worked as a freelancer / consultant 
-* A student 
-* Earning passive income from datavis projects 
-
-### Employee
-Professionals are those who are lean towards working as an employee or working in the academe as a teacher.
-
-#### Near 2/3 are professionals while more than 1/3 are hobbyists
 ```{r}
-commitment_tally
+income_sorted
 ```
-#### Hobbyists vs Professionals (and Ambiguous) distribution
-```{r, fig.width=10, fig.height=2}
-ggplot(commitment_tally, aes(Commitment, weight = nPerc, fill = Commitment)) +
-  geom_bar() + 
+
+### Commitment (Independent vs Associate)
+
+#### Independent
+
+Independents are those who are free-spirited dataviz practicioners working most likely on their own terms (e.g. freelancers, hobbyists). Based from the survey data, these includes:
+
+* **Freelance/Consultant/Independent contractor**
+* **Non-compensated data visualization hobbyist**
+* **Student in a degree program at a college or university**
+* **Passive income from data visualization related products**
+
+#### Associate
+Associates are those who are mostly working in an organization (e.g. employees) with dataviz responsibilities. They are those who have/are:
+
+* **Position in an organization with some dataviz job responsibilities**
+* **Academic/Teacher**
+
+#### How we classified who belongs to which?
+We put weighted points on variables where a respondent has indicated that they identified themselves working on these type of roles.
+
+Since the majority has indicated working in a position in an organization (**DVRoles_Employee**), Weight points were included on the hobbyists and freelance roles to balance out the heavy-leaning towards an employee persona. This also removes the ambiguity that either can be classified from the other.
+
+Another argument is that, who would work on a project without being paid? It is someone who has of strong affinity of a passionate independent DVS persona who can work on projects without monetary compensation!
+
+Then, these points were added and compare the results whichever is higher. This is now our metric that would indicate whether an individual lean towards either an **Independent** persona or an **Associate** persona.
+
+**Independent**
+
+* **+3** if has identified as hobbyist (**DVRoles_Hobbyist**)
+* **+2** if has identified as freelance/consultant (**DVRoles_Freelance**)
+* **+1** if has identified as student (**DVRoles_Student**)
+* **+1** if has identified who has passive income (**DVRoles_PassiveIncome**)
+
+**Associate**
+
+* **+1** if has identified as employee (**DVRoles_Employee**)
+* **+1** if has identified as teacher (**DVRoles_Academic**)
+
+**Ambiguous**
+
+* Those whose weighted points on both Independent and Associate scores were equal.
+
+
+**Nearly 60% are Associates while around 37% are Independents**
+```{r, fig.width=10, fig.height=1.5}
+ggplot(commitment_tally %>%
+         mutate(Class = "class"), 
+       aes(Class, nPerc, fill = Commitment)) +
+  geom_bar(position = "stack", stat = "identity") + 
   coord_flip()
 ```
 
-## Additional indicators - Tools for DV, Charts used and Frustrations
+```{r}
+commitment_tally
+```
+## The 16 DVS Personas
+
+Mix and matching these 4 major indicators, 16 unique personas were created. This is somewhat inspired from Myers-Briggs Type Indicator (MBTI) but with a DVS twist!
+
+**Percentage distribution of the 16 DVS personas**
+```{r}
+library("tidyverse")
+source("scripts/clean.R")
+
+ggplot(tribe_tally %>% 
+  mutate(group = paste(Experience, RoleType, IncomeGroup, Commitment)) %>%
+  mutate(group = fct_reorder(group, n)) %>%
+  mutate(class = "class"), aes(reorder(group, nPerc), nPerc, fill = class)) + 
+  geom_col() +
+  coord_flip()
+```
+
+```{r}
+tribe_tally
+```
+
+25% of the DVS community is a Junior-Analytical-Humblypaid-Associate, the most common among all personas.
+
+Meanwhile a Junior-Creative-Wellpaid-Independent is the rarest persona which is just 0.5% of the DVS members. Imagine a dataviz practitioner who has less than 6 years experience with more than USD80,000 annual salary who is either a freelance or a part-time student. They seem to be like prodigy, free spirited, fast-learning entrepreneurs doing things their way and being paid really well.
+
+
+## The Characters and Preferences of Each Personas (4 Additional indicators)
+
+4 variables from the survey data were chosen to see what distinct character each of the persona inhibit. These are:
+
+**The 4 additional indicators:**
+
+* **Tools for DVS** - identifies the character for each persona (**ToolsForDV_**)
+* **Organizations / Industry** - distribution of the personas to which they are more endemic (**OrgSector_**)
+* **Frustrations** - do each personas have varying frustrations? (**TopFrustrationsDV_**)
+* **Issues** - socio-economic or dvs-specific issues for each persona (**TopIssuesDV_**)
 ```{r}
 source("scripts/add_indicators.R")
 tribe_tools
@@ -123,7 +207,9 @@ tribe_charts
 tribe_frustrations
 ```
 
-### Tool preferences per tribe (Top 10 tools overall)
+### Which tools each persona more likely use?
+
+Let's look at how each persona has more prefered tools than the others.
 
 ```{r, fig.width=12, fig.height=10}
 tribe_tools
@@ -132,15 +218,18 @@ tools_top10
 ggplot(tribe_tools %>% 
          filter(tools_for_dv_vars %in% tools_top10), 
        aes(tools_for_dv_names, percN, fill = tools_for_dv_type)) +
-  geom_col() +
-  coord_flip() +
+  geom_bar(width = 1, stat = "identity", color = "white") + 
+  # coord_flip() +
+  coord_polar() + 
   facet_wrap(vars(tribe_desc))
 ```
 #### Observations
-* Among the junior-analyticals, the humblypaids' use excel as top tool while the wellpaids' use Tableau. Does this imply that Tableau is for the well-offs? Do they
+* Among the junior-analyticals, the humblypaids' use excel as top tool while the wellpaids' use Tableau. Does this imply that Tableau is for the well-offs among the junior analyticals?
 * Humblypaid creatives proudly shows their affinity for illustrator and it's just so obvious with the charts.
-* Unanimously, any tribe seems to use Excel as their top tool for DV.
+* Unanimously, any persona seems to use Excel as their top tool for DV.
 * Junior creative hobbyists tend to use R as either 2nd or 3rd tool.
+* Creative-Wellpaid-Associates are D3.js power users! Who said creatives can't code?
+* Looks so obvious that Illustrator is a creative's bestfriend, except for a creative-wellpaid-independent which a Junior would prefer Pen & paper and Senior uhm... Excel? strange.
 
 ```{r, fig.width = 10, fig.height = 10}
 # ggplot(tribe_tools %>% 
@@ -152,8 +241,10 @@ ggplot(tribe_tools %>%
 ```
 
 
-### How endemic tribes are per industry?
-```{r, fig.width=12, fig.height=10}
+### How common each personas per industry?
+
+Different personas were dispersed in different industries asymmetrically. This visual tool could be beneficial if you are eyeing for a specific persona you want to be in. A rare persona in that industry could either indicate whether it has a difficult prerequisites which makes these persona quite rare.
+```{r, fig.width = 12, fig.height = 10}
 tribe_orgsec
 
 ggplot(tribe_orgsec, aes(org_sector_names, n, fill = org_sector_category)) +
@@ -161,18 +252,34 @@ ggplot(tribe_orgsec, aes(org_sector_names, n, fill = org_sector_category)) +
   coord_flip() +
   facet_wrap(vars(tribe_desc))
 ```
+**Observations (and a few rants)**
+
+* Junior-Analytical-Humblypaid-Associate seems to visually occupy a lot of the bars followed by Senior-Analytical-Wellpaid-Associate. These two personas earlier were ranked as the first and second most common personas.
+* Almost 50% of the Senior-Analytical-Humblypaid-Associates identified themselves coming from the Academe.
+* If you want to be a creative but want to earn a lot of money, you should be in the IT Industry, said by a Creative-Wellpaid.
+* Most of those in the Journalism industry are either Junior-Creative-Humblypaid
 
 
-### Top frustrations per tribe
-```{r, fig.width=12, fig.height=10}
-tribe_frustrations
+### What frustrates each persona the most?
 
+Top 7 frustrations were picked among the 13 in the survey. These were encoded in the charts as:
+
+* **Time**: Lack of time
+* **Design**: Lack of design expertise
+* **Data Access**: Accessing data
+* **Data Literacy**: Low data literacy
+* **Respect DV**: Not enough respect for dataviz
+* **Tech tools limit**: Technical limitations of the tools
+* **Non-viz activity**: Too much effort spent on non-viz activity
+
+```{r, fig.width = 12, fig.height = 10}
 ggplot(tribe_frustrations %>%
-         filter(top_frustrations_vars %in% frustrations_top10), 
-       aes(top_frustrations_names, percN, fill = top_frustrations_type)) +
-  geom_col() +
-  coord_flip() +
-  facet_wrap(vars(tribe_desc))
+         filter(top_frustrations_vars %in% frustrations_top7), 
+       aes(top_frustrations_short, percN, fill = top_frustrations_type)) +
+  geom_bar(width = 1, stat = "identity", color = "white") +
+  coord_polar() +
+  # coord_flip() +
+  facet_wrap(vars(tribe_desc), ncol = 4)
 ```
 #### Observations
 * Junior-analyticals looks unanimous in their frustrations, the lask of design expertise. For junior-analytical-wellpaid-hobbyist, it is their second frustration to lack of time.
@@ -182,20 +289,18 @@ ggplot(tribe_frustrations %>%
 * Senior-creative-humbly-paid employees notes that the lack of recpect and tech limitations are their top frustrations.
 
 
-### Top issues per tribe
-```{r, fig.width=12, fig.height=10}
+### What issues each persona feel should be addressed?
+
+```{r, fig.width = 12, fig.height = 10}
 tribe_issues
 
 ggplot(tribe_issues %>%
          filter(top_issues_vars %in% top_issues_top10), 
        aes(top_issues_names, percN, fill = top_issues_type)) +
-  geom_col() +
+  geom_bar(position = "stack", stat = "identity") +
   coord_flip() +
   facet_wrap(vars(tribe_desc))
 ```
 #### Observations
-* Unanimously lack of literacy for majority regardless of tribe. Second to it is the lack of awareness of impact of data visualization
-* If we try to remove the top 2 
-
-
-
+* Unanimously lack of literacy for majority regardless of persona. Second to it is the lack of awareness of impact of data visualization.
+* Despite the slight differences in frustrations for every persona, all the personas surprisingly seem to unanimously agree on the same issues.
